aulas de padroes de projeto + lista 03

--- a/gsi526.html
+++ b/gsi526.html
@@ -119,7 +119,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
 					<!--<div>
@@ -142,13 +142,13 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/0a7_beBYw58"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>-->
-					<!--<div>
-					<b>Listas e Videoaulas:</b> 
+					<div>
+					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>16/07/2025</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 </a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)--></li>
 					<!--<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
