--- a/gsi526.html
+++ b/gsi526.html
@@ -91,7 +91,7 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(24/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
 					<li>Prova 2 - 35 pts <b>(29/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i></li>
-					<li>Prova 3 - 35 pts <b>(03/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i>--></li>
+					<li>Prova 3 - 35 pts <b>(03/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i></li>
 					<!--<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<!--<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<!--<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"></li>-->
@@ -147,7 +147,7 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 </a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista para a prova 3 (Não precisa entregar!)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)--></li>
 					<!--<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
