datas das provas 3 e sub

--- a/poo-python.html
+++ b/poo-python.html
@@ -87,7 +87,8 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(30/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02 e 03 </i>)</li>
 					<li>Prova 2 - 35 pts <b>(28/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
-					<li>Prova 3 - 35 pts <b>(09/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
+					<li>Prova 3 - 35 pts <b>(02/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
+					<li>Prova sub. - 35 pts <b>(09/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
