aulas sobre funcoes e arquivos!

--- a/pc1.html
+++ b/pc1.html
@@ -87,7 +87,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(26/09/2025)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(24/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06 e 07 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(05/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 08, 09, 10, 11 e 12 </i>)--></li>
+					<li>Prova 3 - 30 pts <b>(05/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 08 e 09 </i>)</li>
 						
 					</ul>
 					</div>  
