--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -96,7 +96,7 @@
 					<ul>
 					<li>Prova - 20 pts <b>(26/09/25)</b></a></li>
 					<li>Trabalho - 40 pts <b>(05/12/25)</b><a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios - 40 pts <b>(12/12/25)</b><!-- - <i>Todos os exercícios</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios - 40 pts <b>(05/12/25)</b> - <i>Todos os exercícios pelo SIGAA!</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-pc1/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-pc1/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Exercícios Práticos - 10 pts <b>(Entrega: 30/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
@@ -111,7 +111,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 4.pdf"> Exercício Prático 4</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 5.pdf"> Exercício Prático 5</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 6.pdf"> Exercício Prático 6</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 7.pdf"> Exercício Prático 7</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 8.pdf"> Exercício Prático 8</a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 9.pdf"> Exercício Prático 9</a>--></li>
 					</ul>
