--- a/gsi526.html
+++ b/gsi526.html
@@ -92,6 +92,7 @@
 					<li>Prova 1 - 30 pts <b>(24/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
 					<li>Prova 2 - 35 pts <b>(29/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i></li>
 					<li>Prova 3 - 35 pts <b>(03/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i></li>
+					<li>Prova sub. - 35 pts <b>(09/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i></li>
 					<!--<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<!--<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<!--<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"></li>-->
